<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/bDrawCercle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Circles" />

            <Button
                android:id="@+id/bTween"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tween" />

            <Button
                android:id="@+id/bLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Linear" />

            <Button
                android:id="@+id/bRotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rotacio" />

            <Button
                android:id="@+id/bFade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fade" />

            <Button
                android:id="@+id/bColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>